--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "material-ui-image": "^3.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-truncate": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
