--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "framer-motion": "^1.8.4",
     "markdown-to-jsx": "^6.10.3",
     "material-ui-image": "^3.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
-    "react-truncate": "^2.4.0"
+    "react-truncate": "^2.4.0",
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
